# Fallen-Miner

./: README.md
Builder/: go.mod  go.sum  main.go  miscs.go
Client/: CMakeLists.txt  configs.go  core.go  core_nopanel.go  go.mod  go.sum  information.go  main.go  miscs.go  runpe.go  watch.go
Client/include/: embedded_resource.h  http_client.h  json_printer.h  process_info.h  resources.h  util.h
Client/resources/: embedded_resource.rc
Client/src/: delete_pending_file.cpp  hollowing_parts.cpp  http_client.cpp  inject_core.cpp  json_printer.cpp  jsontest.txt  main.cpp  main.cpp.bak  pe_hdrs_helper.cpp  process_info.cpp  util.cpp
Modified XMRig/src/: donate.h  xmrig.cpp
Modified XMRig/src/net/strategies/: DonateStrategy.cpp
Server/: config.json  go.mod  go.sum  main.go  miscs.go  runserver.bat  server.db  structs.go
Server/assets/css/: devices.css  styles.css
Server/assets/js/: devices.js  functions-proxy.js  tasks.js  variables.js  worldmap.js
Server/views/: 404.html  about.html  dashboard.html  devices.html  login.html  mining.html  register.html  tasks.html
